# eng-sub-translation-optimize

./: .gitignore  README.md  pyproject.toml  requirements.txt  subtitle_optimizer.py
src/: __init__.py  cps_optimizer.py  interjection_remover.py  interjections_en.py  llm_shortener.py  srt_processor.py
tests/: __init__.py  conftest.py  test_cps_optimizer.py  test_interjection_remover.py  test_llm_shortener.py  test_srt_processor.py  test_subtitle_optimizer.py
